feat: Add comprehensive integration tests and enhanced documentation
- Add integration tests for Requester + StatusPusher + Router flow
  * MockStrategy for simulating upstream APIs with configurable delays/errors
  * 5 test cases: sequential processing, heartbeats, routing, backpressure, full integration
  * All tests passing (100% success rate)

- Enhance README.md with 654+ new lines
  * Architecture diagram (double queue flow)
  * Complete WebSocket contract (DATA/STATUS events)
  * 20 Prometheus metrics with PromQL queries and alerting rules
  * Configuration guide with 3 scenarios (dev, prod, slow upstream)
  * Troubleshooting section

- Add supporting documentation
  * INTEGRATION_TESTS_SUMMARY.md: Test execution and validation checklist
  * METRICS_SUMMARY.md: Metrics overview
  * PROMETHEUS_METRICS.md: Detailed metrics documentation
  * WIRING.md: System wiring documentation
  * websocket/PROTOCOL.md: WebSocket protocol specification
  * docs/PROMETHEUS_TESTING.md: Prometheus testing guide

- Implement double queue system components
  * internal/queue/requester: Request queue with circuit breaker
  * internal/queue/status: Status tracking and heartbeat pusher
  * internal/router: Message routing to WebSocket clients
  * internal/metrics: Prometheus metrics collection

--- a/configs/app.yaml
+++ b/configs/app.yaml
@@ -68,3 +68,15 @@ policies:
     events: 720h # 30 días
     logs: 168h # 7 días
     metrics: 2160h # 90 días
+
+# Configuración del módulo Requester (queue de consultas)
+requester:
+  timeout_seconds: 30
+  backoff_seconds: [60, 120, 300] # 1min, 2min, 5min
+  circuit_breaker:
+    failures_threshold: 5
+    pause_minutes: 5
+
+# Configuración del módulo Status (heartbeats de estado)
+status:
+  heartbeat_seconds: 10 # Emitir heartbeat cada 10 segundos
