feat(frontend): add React frontend with Tenants, Sites and External Services management UI

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ Thumbs.db
 # Build artifacts
 dist/
 build/
+
+# Frontend (Node.js / React)
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/.env.local
+frontend/.env.*.local
